# food

./: db.sqlite3  extensions.txt  pyproject.toml
food/: models.py  urls.py  views.py
food/migrations/: 0001_initial.py  0002_item_item_image.py  0003_item_user_name.py
food/static/food/: style.css
food/templates/food/: base.html  detail.html  index.html  item-form.html
mysite/: settings.py  urls.py
users/: forms.py  models.py  signals.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
