[project]
name = "food"
version = "0.1.0"
description = "A food app"
authors = [
    {name = "Kevin Hsu",email = "kevinhsu1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=4.2,<5.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
